--- a/gb/25/7/5/n14545455.md
+++ b/gb/25/7/5/n14545455.md
@@ -36,7 +36,6 @@
 <p>资料更新时间：2025年7月5日晚间10时4分</p>
 <p>责任编辑：林妍#</p>
 </div>
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
 <li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
@@ -49,7 +48,7 @@
 <li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
 <li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/10/n11248062.md#1" target="_blank">共产暴政录：共产革命前后的古巴华人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/8/n11032583.md#1" target="_blank">拥有幸福健康 澳洲民众感恩法轮功师父</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/10/n10774701.md#1" target="_blank">推倒这堵墙——里根总统的柏林墙演讲</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/25/n11409005.md#1" target="_blank">法轮功反迫害 川普政府与美国国会公开声援</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
