--- a/gb/23/4/14/n13972923.md
+++ b/gb/23/4/14/n13972923.md
@@ -73,36 +73,33 @@
 <figure style="width: 451px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/03/30/id5159839-Jack-Sorenson-on-the-Paparosa-1200x1600.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/03/30/id5159839-Jack-Sorenson-on-the-Paparosa-1200x1600.jpeg" width="451" b="602" /></a><figcaption class="wp-caption-text">索伦森的近照。（由Jack Sorenson Fine Art, Inc提供?）</figcaption></figure>
 <p>原文：<ahref="https://www.theepochtimes.com/cowboy-artist-raised-on-texas-ranch-paints-old-west-and-new-west-inspired-by-gunsmoke-reenactments_5159836.md#1" target="_blank" rel="noopener noreferrer">“Cowboy Artist Raised on Texas Ranch Paints Old West and New West, Inspired by ‘Gunsmoke’ Reenactments”</a>刊于英文《大纪元时报》网站。</p>
 <p>责任编辑：韩玉#</p>
-	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/24/n13809150.md#1">组图：画家户外绘画与实景的无缝完美融合</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/13/n13823913.md#1">组图：油画家笔下的美国西部牧场 细腻逼真</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/10/n13903881.md#1">组图：艾美奖纪录片以盲人画家作品展美国风土</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/29/n13917902.md#1">组图：俄国油画家神奇海景画 可闻到海浪气息</a></li>
-<hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/6/n11167928.md#1" target="_blank">林辉：寿则多辱 鲁迅之弟周作人凄惨中死去</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/4/30/n9092520.md#1" target="_blank">法轮大法洪传新西兰 20年点滴回顾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/27/n10093465.md#1" target="_blank">林辉：江青法庭辩护词透露的真相</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/15/n11385671.md#1" target="_blank">嫁到韩国的中国媳妇：守住善就能走出困境</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781764.md#1">太后临终前 竟让皇帝不要把皇位传给儿子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/9/n12607219.md#1">【元曲大家】散曲第一人马致远</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359080.md#1">美国9岁女孩突然描述前世生活 父母惊呆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/22/n14355475.md#1">明日黄花蝶也愁！看苏轼怎样走出低谷 转化人生境界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/25/n14357439.md#1">【未解之谜】神奇的铁板神算 倪匡亲证命中率100%！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14361002.md#1">【唐青看时事】能上能下？中共政治局剑指谁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/23/n14356477.md#1">【环球直击】美国大选投票箱三起纵火 FBI调查</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14361041.md#1">【音乐】神韵乐团三、四、五、六团 音乐会选播｜首播：美东时间2024年11月2日 晚间8点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360161.md#1">台风康芮来袭 30日绿岛兰屿率先停班停课</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14359849.md#1">台风康芮增强 气象专家：登陆台湾概率高</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359589.md#1">否认为歌曲版权起诉刀郎 云朵代言品牌遭下架</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360436.md#1">投资2亿 刘德华《焚城》点映首日票房仅34万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359656.md#1">遭向佐突搧巴掌 李小龙模仿者方小龙称已报警</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360347.md#1">45岁邓超头发胡子全白 侧脸神似周星驰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359105.md#1">《正年》收视创佳绩 金泰梨登话题演员榜冠军</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359233.md#1">专家：面包放在这种东西旁边 会更快发霉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/25/n14357571.md#1">夜尿超困扰！2动作可改善</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/27/n14358642.md#1">打蛋如何不让蛋壳掉进碗里？2个关键技巧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360606.md#1">为什么人们爱看恐怖片吓自己？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/16/n14351750.md#1">你应该了解 不用电有哪些煮饭方式与技巧</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544299.md#1">饰《鱿鱼游戏3》反角 任时完粉丝数暴涨百万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544989.md#1">开饺子店被吐槽出餐慢 大陆演员谭凯直播致歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/14/n13972923.htm">组图：德州牛仔艺术家用油画展现西部风光</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/4/14/n13972923.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
